2005/04/11	kaffeetisch

	* Gtk2.pm, META.yml, Makefile.PL, NEWS, README: Stable release
	1.081.

2005/04/11	kaffeetisch

	Merge from HEAD:

	* xs/GdkDrawable.xs: Update a FIXME comment.

	* xs/GtkIconView.xs: Add a license disclaimer.

	* xs/GtkNotebook.xs: Document that the integer return values are
	new in 1.080.

	* t/GtkDnd.t, xs/GtkDnd.xs: Allow undef for the mask argument of
	gtk_drag_set_icon_pixmap.

2005/03/25	kaffeetisch

	Merge from HEAD:

	* CodeGen.pm: Make the GEnum and GFlags converters cast their
	return values to the correct type to fix compilation when using a
	C++ compiler.

2005/03/07	kaffeetisch

	* Gtk2.pm, META.yml, Makefile.PL, NEWS, README: Stable release
	1.080.

2005/03/07	kaffeetisch

	* t/GtkFileChooser.t: Temporarily mark a failing test as TODO.

2005/02/28	kaffeetisch

	* Gtk2.pm, META.yml, Makefile.PL, NEWS, README: Unstable release
	1.074.

2005/02/28	kaffeetisch

	* t/GdkPixmap.t: Fix skip count for gtk+ versions older than 2.2.

2005/02/26	muppetman

	* xs/GtkNotebook.xs, t/GtkNotebook.t: The multiple definitions of
	some functions (in #if branches) confused the doc generation tools
	into creating multiple entries.  Folded the #if into the individual
	xsubs.  To make life easier for the caller, simply implement for
	ourselves the missing return values on older gtk+s.  Tests included.

	* xs/GdkPixmap.xs, t/GdkPixmap.t:  gdk_pixmap_create_from_xpm()
	returns NULL if the file is not found; catch this and return undef
	instead of crashing.  With a test.  Also allow undef and improve
	docs for a few parameters.

2005/02/26	kaffeetisch

	* t/GtkAccelGroup.t, t/GtkAccelMap.t, t/GtkStock.t: Mark tests as
	TODO that currently fail due to what appears to be a bug in
	Test::More.

	* t/PangoLayout.t: Test pango_layout_[sg]et_attributes.

2005/02/19 20:13 (+0100) pcg

	* xs/GdkProperty.xs: document data instead of length as result value.
	* xs/GtkNotebook.xs: insert functions return gint from 2.4 onwards.
