@@ -1,3 +1,10 @@
+2005/06/13	muppetman
+
+	Merge from HEAD:
+
+	* xs/GnomeAboutDialog.xs: Actually store the instances created by
+	Gtk2::show_about_dialog(), so that they can be reused.
+
 2005/04/11	kaffeetisch
 
 	* Gtk2.pm, META.yml, Makefile.PL, NEWS, README: Stable release
